# mini-fintickstreams

./: API.md  Cargo.toml  Dockerfile  README.md  dbsetup.sql  registry.sql
docs/: API.md
k8s/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
scripts/: env.example
src/: crypto_init.rs  error.rs  lib.rs  main.rs
src/api/: config.rs  error.rs  mod.rs  router.rs  server.rs  types.rs
src/api/handlers/: health.rs  instruments_axum.rs  knobs.rs  limiters.rs  mod.rs  streams.rs  ui.rs
src/app/: capabilities.rs  config.rs  dependencies.rs  metrics.rs  mod.rs  ports.rs  runtime.rs  state.rs  stream_types.rs
src/app/control/: batch.rs  helpers.rs  httppoll.rs  mod.rs  stream.rs  ws.rs
src/app/health/: eval.rs  guard.rs  mod.rs  sampler.rs  test.rs  types.rs
src/config/: api.toml  app.toml  binance_linear.toml  bybit_linear.toml  prometheus.toml  redis.toml  timescale_db.toml
src/db/: batch.rs  config.rs  metrics.rs  mod.rs  pools.rs  writer.rs
src/db/health/: controller.rs  mod.rs  types.rs
src/ingest/: config.rs
src/ingest/datamap/: ctx.rs  event.rs  traits.rs
src/ingest/datamap/sources/: mod.rs
src/ingest/datamap/sources/binance_linear/: map.rs  types.rs
src/ingest/datamap/sources/bybit_linear/: map.rs  mod.rs  types.rs
src/ingest/datamap/sources/hyperliquid_perp/: map.rs
src/ingest/datamap/testdata/: BybitLinearDepthSnapshot.json  BybitLinearExchangeInfoSnapshot.json  BybitLinearPingSnapshot.json  BybitLinearServerTimeSnapshot.json  BybitLinearWsDepthUpdate.jsonl  BybitLinearWsLiquidation.jsonl  BybitLinearWsOIFundingUpdate.jsonl  BybitLinearWsTrade.jsonl  bybit_linear.sh  inspect_bybit_contract_types.sh
src/ingest/http/: api_client.rs  rate_limiter.rs
src/ingest/instruments/: inspect.rs  loader.rs  registry.rs  spec.rs
src/ingest/spec/: resolve.rs
src/ingest/ws/: limiter_registry.rs  subscribe_limiter.rs  ws_client.rs  ws_tests.rs
src/prometheus/: config.rs  server.rs
src/redis/: client.rs  config.rs  fields.rs  manager.rs  mod.rs
src/telemetry/: tracing.rs
src/tests/: db_registry.rs  db_writes.rs  http_deserialize.rs  mod.rs  redis_failure.rs  redis_pressure.rs  redis_retention.rs  runtime.rs  ws_deserialize.rs
